gitops/environments/prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: retail-store-ingress
  namespace: retail-store-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "squad-prod-static-ip"
    networking.gke.io/managed-certificates: "prod-ssl-cert"
spec:
  rules:
  - host: "34.54.183.106.nip.io" 
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui-prod
            port:
              number: 80
